# FluxInfer

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_suite.py  simulation_suite.py
docs/: architecture.md
examples/: server.py
flux_infer/: dashboard.py
flux_infer/flux_infer/: __init__.py
flux_infer_core/: Cargo.toml
flux_infer_core/src/: lib.rs
tests/: test_core.py
