[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "flux_infer"
version = "0.1.0"
description = "A Unified Optimization Engine for Multimodal LLM Inference"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy",
    "torch",
    "pydantic",
    "transformers"
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "flux_infer_core"
